--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 GITHUB_KEY=21bf38121510a6048e01
 GITHUB_SECRET=e5213687284d0ebdd5dca5962b826d05914d5e0c
-MONGO_URI=mongodb://heroku_9xhj4tqs:tq9vcho3sh292fs2i537i43jcn@ds025379.mlab.com:25379/heroku_9xhj4tqs
+MONGO_URI=mongodb://localhost:27017/clementinejs
 PORT=8080
 APP_URL=https://fcc-clement-darlingtonamz.c9users.io/
